--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "dexie": "^4.2.0",
     "nuxt": "^3.13.0"
   },
   "devDependencies": {
-    "cross-env": "^10.0.0"
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "cross-env": "^10.0.0",
+    "eslint": "^8.57.1",
+    "prettier": "^3.6.2"
   }
 }
